# mikubooru-server

./: .gitignore  Cargo.toml
migrations/: 20240527220252_create_user.sql
src/: main.rs
src/db/: mod.rs  types.rs  user.rs
