[package]
name = "mikubooru-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "migrate", "time", "macros"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
